--- a/introduction.tex
+++ b/introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction}
-The need for providing production-grade quality software was there from the inception of software engineering. The most effective way to ensure the quality of a software proved to be testing. Throughtout the history of computer science software engineers and architects came up with different testing methods and techniques. Nonetheless, manual way of writing test was demonstrated to be insufficient and therefore random walk testing - fuzzing was invented \cite{miller1990empirical}.
+The need for providing production-grade quality software was there from the inception of software engineering. The most effective way to ensure the quality of software proved to be testing. Throughout the history of computer science, software engineers and architects came up with different testing methods and techniques. Nonetheless, the manual way of writing tests was demonstrated to be insufficient and therefore random walk testing - fuzzing was invented \cite{miller1990empirical}.
 
-However, as more and more applications moved from personal computers to the web, a new challenge arised. Engineers needed to find a way to effectively fuzz the web applications. Our focus was primarily on this aspect of the fuzzing. Mainly on how to automate the fuzzing and how to do it effeciently.
+However, as more and more applications moved from personal computers to the web, a new challenge arose. Engineers needed to find a way to effectively fuzz the web applications. Our focus was primarily on this aspect of the fuzzing. Mainly on how to automate the fuzzing and how to do it efficiently.
 
-In our work we will state some basic definitions along with criteria that are used to categorize and differentiate fuzzers. Then we will introduce existing state-of-the-art fuzzers. We will continue our journey by exploring the way how web services nowadays work and which information about their structure they offer. Next we will dicsuss the existing work done in a field of fuzzing web services and we will try to find a way to improve on them. After that, we design and implement a generation-based \textit{smart} black-box fuzzer. Subsequently, we will try to find bugs in mature widely used software and conclude on it.
+In our work, we will state some basic definitions along with criteria that are used to categorize and differentiate fuzzers. Then we will introduce existing state-of-the-art fuzzers. We will continue our journey by exploring the way how web services nowadays work and which information about their structure they offer. Next, we will discuss the existing work done in the field of fuzzing web services and we will try to find a way to improve on them. After that, we design and implement a generation-based \textit{smart} black-box fuzzer. Subsequently, we will try to find bugs in mature widely used software and conclude on it.
